fix gap with align-item center

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -125,6 +125,7 @@ body,html{
 
 #men-women{
     z-index: 3;
+    margin-top: 100px;
     font-family: 'giflika',sans-serif;
     width: 218px;
     text-align: left;
@@ -153,8 +154,9 @@ body,html{
     height: calc(100vh - 100px);
     box-sizing:border-box;
     background-color: #fffbf2;
-    padding: 182px 80px 0px 80px;
-    @extend .flex-space;
+    padding: 200px 80px 0px 80px;
+    display: flex;
+    justify-content: space-between;
     
 }
 #home-social-media-link{
@@ -198,7 +200,7 @@ body,html{
     height: 674px;
     width: 597px;
     position: absolute;
-    bottom: 30px;
+    bottom: 0px;
     right: 50%;
     transform: translateX(50%);
     z-index: 1;
